--- a/index.html
+++ b/index.html
@@ -5,13 +5,47 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>WEB | POS</title>
-    <link rel="stylesheet" href="CSS/bootstrap-5.3.2/css/bootstrap.css">
+    <!--<link rel="stylesheet" href="CSS/bootstrap-5.3.2/css/bootstrap.css">-->
+    <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/pos.css">
+    <style>
+        body > nav {
+            width: 100vw;
+            height: 70px;
+            background-color: black;
+        }
+
+        body > nav > ul {
+            position: absolute;
+            right: 10px;
+            list-style: none;
+            display: flex;
+        }
+
+        body > nav > ul > li {
+            padding: 10px;
+            color: white;
+        }
+
+        body > nav > ul > li:hover {
+            color: dodgerblue;
+            cursor: pointer;
+        }
+    </style>
 </head>
 
 <body>
-<h1>POS</h1>
+<nav>
+    <ul>
+        <li>Home</li>
+        <li>Customer</li>
+        <li>Item</li>
+        <li>Orders</li>
+        <li>Order Details</li>
+    </ul>
+</nav>
 
+<script src="JS/jquery-3.7.1.js"></script>
 <script src="JS/pos.js"></script>
 </body>
 </html>
