--- a/index.html
+++ b/index.html
@@ -9,33 +9,46 @@
     <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/pos.css">
     <style>
-        body > nav {
-            width: 100vw;
-            height: 70px;
-            background-color: black;
+        body {
+            margin: 0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
-        body > nav > ul {
-            position: absolute;
-            right: 10px;
+        nav {
+            width: 100%;
+            height: 70px;
+            background-color: #333;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 20px;
+        }
+
+        nav ul {
             list-style: none;
+            margin-right: 35px;
+            padding: 0;
             display: flex;
         }
 
-        body > nav > ul > li {
-            padding: 10px;
+        nav li {
+            margin: 0 15px;
             color: white;
+            cursor: pointer;
+            transition: color 0.3s ease;
         }
 
-        body > nav > ul > li:hover {
+        nav li:hover {
             color: dodgerblue;
-            cursor: pointer;
         }
     </style>
 </head>
 
 <body>
 <nav>
+    <div>
+        <h1 style="color: white">WEB | POS</h1>
+    </div>
     <ul>
         <li>Home</li>
         <li>Customer</li>
@@ -47,5 +60,12 @@
 
 <script src="JS/jquery-3.7.1.js"></script>
 <script src="JS/pos.js"></script>
+<script>
+    $(document).ready(function () {
+        $('body>nav>ul>li:nth-child(1)').click(function () {
+            window.open("https://ijse.lk", "_blank");
+        });
+    });
+</script>
 </body>
 </html>
