--- a/index.html
+++ b/index.html
@@ -1,71 +1,50 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB | POS</title>
-    <!--<link rel="stylesheet" href="CSS/bootstrap-5.3.2/css/bootstrap.css">-->
-    <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/pos.css">
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        nav {
-            width: 100%;
-            height: 70px;
-            background-color: #333;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0 20px;
-        }
-
-        nav ul {
-            list-style: none;
-            margin-right: 35px;
-            padding: 0;
-            display: flex;
-        }
-
-        nav li {
-            margin: 0 15px;
-            color: white;
-            cursor: pointer;
-            transition: color 0.3s ease;
-        }
-
-        nav li:hover {
-            color: dodgerblue;
-        }
-    </style>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 
 <body>
-<nav>
-    <div>
-        <h1 style="color: white">WEB | POS</h1>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <h2 style="color: white">WEB | POS</h2>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="http://ijse.lk" target="_blank">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Customer</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Item</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Orders</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Order Details</a>
+                </li>
+            </ul>
+        </div>
     </div>
-    <ul>
-        <li>Home</li>
-        <li>Customer</li>
-        <li>Item</li>
-        <li>Orders</li>
-        <li>Order Details</li>
-    </ul>
 </nav>
 
+<!-- Bootstrap JS & Dependencies -->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
+
+<!-- Custom Scripts -->
 <script src="JS/jquery-3.7.1.js"></script>
 <script src="JS/pos.js"></script>
-<script>
-    $(document).ready(function () {
-        $('body>nav>ul>li:nth-child(1)').click(function () {
-            window.open("https://ijse.lk", "_blank");
-        });
-    });
-</script>
 </body>
 </html>
