--- a/index.html
+++ b/index.html
@@ -5,20 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB | POS</title>
     <link rel="stylesheet" href="CSS/pos.css">
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <h2 style="color: white">WEB | POS</h2>
+        <h2 class="float-start" style="color: white">WEB | POS</h2>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="http://ijse.lk" target="_blank">Home</a>
                 </li>
@@ -39,11 +38,9 @@
     </div>
 </nav>
 
-<!-- Bootstrap JS & Dependencies -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
 
-<!-- Custom Scripts -->
 <script src="JS/jquery-3.7.1.js"></script>
 <script src="JS/pos.js"></script>
 </body>
