--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <h2 class="float-start" style="color: white">WEB | POS</h2>
+        <a class="navbar-brand" href="javascript:void(0);" style="color: white">WEB | POS</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
