--- a/index.html
+++ b/index.html
@@ -4,44 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB | POS</title>
-    <link rel="stylesheet" href="CSS/pos.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="CSS/bootstrap-5.3.2/css/bootstrap.css">
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        nav {
+            width: 100%;
+            height: 70px;
+            background-color: #333;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 20px;
+        }
+
+        nav > div > h1 {
+            margin-top: 6px;
+            cursor: pointer;
+        }
+
+        nav ul {
+            list-style: none;
+            margin: -10px;
+            padding: 0;
+            display: flex;
+        }
+
+        nav li a {
+            margin: 0 15px;
+            color: white;
+            cursor: pointer;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        nav li a:hover {
+            color: dodgerblue;
+        }
+    </style>
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-        <a class="navbar-brand" href="javascript:void(0);" style="color: white">WEB | POS</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="http://ijse.lk" target="_blank">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Customer</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Item</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Orders</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Order Details</a>
-                </li>
-            </ul>
-        </div>
+<nav>
+    <div>
+        <h1 style="color: white">WEB | <span style="color: dodgerblue">POS</span></h1>
     </div>
+    <ul>
+        <li><a href="https://ijse.lk" target="_blank">Home</a></li>
+        <li><a href="https://ijse.lk" target="_blank">Customers</a></li>
+        <li><a href="https://ijse.lk" target="_blank">Items</a></li>
+        <li><a href="https://ijse.lk" target="_blank">Orders</a></li>
+        <li><a href="https://ijse.lk" target="_blank">Order Details</a></li>
+    </ul>
 </nav>
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-
-<script src="JS/jquery-3.7.1.js"></script>
-<script src="JS/pos.js"></script>
 </body>
 </html>
