--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB | POS</title>
-    <link rel="stylesheet" href="CSS/bootstrap-5.3.2/css/bootstrap.css">
+    <link rel="stylesheet" href="CSS/normalize.css">
     <style>
         body {
-            margin: 0;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
         nav {
             width: 100%;
             height: 70px;
-            background-color: #333;
+            background-color: #333333;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -22,15 +21,16 @@
         }
 
         nav > div > h1 {
-            margin-top: 6px;
+            margin-top: 18px;
+            margin-left: 10px;
             cursor: pointer;
         }
 
         nav ul {
             list-style: none;
-            margin: -10px;
             padding: 0;
             display: flex;
+            margin-right: 30px;
         }
 
         nav li a {
