--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0; /* Add margin reset to body */
         }
 
         nav {
@@ -20,10 +21,14 @@
             padding: 0 20px;
         }
 
-        nav > div > h1 {
-            margin-top: 18px;
-            margin-left: 10px;
+        nav div h1 {
+            margin: 0; /* Reset margin */
             cursor: pointer;
+            color: white; /* Move color styling to CSS */
+        }
+
+        nav div span {
+            color: dodgerblue; /* Style the span separately */
         }
 
         nav ul {
@@ -50,7 +55,7 @@
 <body>
 <nav>
     <div>
-        <h1 style="color: white">WEB | <span style="color: dodgerblue">POS</span></h1>
+        <h1>WEB | <span>POS</span></h1>
     </div>
     <ul>
         <li><a href="https://ijse.lk" target="_blank">Home</a></li>
