--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 0; /* Add margin reset to body */
         }
 
-        nav {
+        #main-nav {
             width: 100%;
             height: 70px;
             background-color: #333333;
@@ -21,24 +21,24 @@
             padding: 0 20px;
         }
 
-        nav div h1 {
+        #main-nav #logo h1 {
             margin: 0; /* Reset margin */
             cursor: pointer;
             color: white; /* Move color styling to CSS */
         }
 
-        nav div span {
+        #main-nav #logo span {
             color: dodgerblue; /* Style the span separately */
         }
 
-        nav ul {
+        #main-nav #nav-list {
             list-style: none;
             padding: 0;
             display: flex;
             margin-right: 30px;
         }
 
-        nav li a {
+        #main-nav #nav-list .nav-item a {
             margin: 0 15px;
             color: white;
             cursor: pointer;
@@ -46,23 +46,23 @@
             transition: color 0.3s ease;
         }
 
-        nav li a:hover {
+        #main-nav #nav-list .nav-item a:hover {
             color: dodgerblue;
         }
     </style>
 </head>
 
 <body>
-<nav>
-    <div>
+<nav id="main-nav">
+    <div id="logo">
         <h1>WEB | <span>POS</span></h1>
     </div>
-    <ul>
-        <li><a href="https://ijse.lk" target="_blank">Home</a></li>
-        <li><a href="https://ijse.lk" target="_blank">Customers</a></li>
-        <li><a href="https://ijse.lk" target="_blank">Items</a></li>
-        <li><a href="https://ijse.lk" target="_blank">Orders</a></li>
-        <li><a href="https://ijse.lk" target="_blank">Order Details</a></li>
+    <ul id="nav-list">
+        <li class="nav-item"><a href="https://ijse.lk" target="_blank">Home</a></li>
+        <li class="nav-item"><a href="https://ijse.lk" target="_blank">Customers</a></li>
+        <li class="nav-item"><a href="https://ijse.lk" target="_blank">Items</a></li>
+        <li class="nav-item"><a href="https://ijse.lk" target="_blank">Orders</a></li>
+        <li class="nav-item"><a href="https://ijse.lk" target="_blank">Order Details</a></li>
     </ul>
 </nav>
 
