--- a/index.html
+++ b/index.html
@@ -5,49 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB | POS</title>
     <link rel="stylesheet" href="CSS/normalize.css">
+    <link rel="stylesheet" href="CSS/pos.css">
     <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0; /* Add margin reset to body */
+        section h1 {
+            text-align: center;
+            font-size: 2em;
+            margin-top: 40px;
         }
 
-        #main-nav {
+        section div div:nth-child(1) {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            max-width: 400px;
+            margin-left: 100px;
+            margin-top: 100px;
+        }
+
+        section div div:nth-child(2) {
+            display: inline-block;
+        }
+
+        section input {
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
             width: 100%;
-            height: 70px;
-            background-color: #333333;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0 20px;
+            box-sizing: border-box;
         }
 
-        #main-nav #logo h1 {
-            margin: 0; /* Reset margin */
+        section button:nth-child(1) {
+            margin-left: 100px;
+            background-color: dodgerblue;
+        }
+
+        section button:nth-child(3) {
+            background-color: orange;
+        }
+
+        section button:nth-child(4) {
+            background-color: red;
+        }
+
+        section button {
+            padding: 10px;
+            background-color: #2ecc71;
+            border: none;
+            border-radius: 5px;
             cursor: pointer;
-            color: white; /* Move color styling to CSS */
-        }
-
-        #main-nav #logo span {
-            color: dodgerblue; /* Style the span separately */
-        }
-
-        #main-nav #nav-list {
-            list-style: none;
-            padding: 0;
-            display: flex;
-            margin-right: 30px;
-        }
-
-        #main-nav #nav-list .nav-item a {
-            margin: 0 15px;
-            color: white;
-            cursor: pointer;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-
-        #main-nav #nav-list .nav-item a:hover {
-            color: dodgerblue;
+            font-weight: bold;
+            margin-top: 10px;
+            width: 96px;
         }
     </style>
 </head>
@@ -66,5 +74,22 @@
     </ul>
 </nav>
 
+<section>
+    <h1>Customer Management</h1>
+    <div>
+        <div>
+            <input placeholder="Customer Id" required>
+            <input placeholder="Name" required>
+            <input placeholder="Address" required>
+            <input placeholder="Salary" required>
+        </div>
+        <div>
+            <button>Save</button>
+            <button>Search</button>
+            <button>Update</button>
+            <button>Delete</button>
+        </div>
+    </div>
+</section>
 </body>
 </html>
