--- a/index.html
+++ b/index.html
@@ -4,92 +4,141 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB | POS</title>
-    <link rel="stylesheet" href="CSS/normalize.css">
-    <link rel="stylesheet" href="CSS/pos.css">
+    <link rel="stylesheet" href="CSS/bootstrap-5.3.2/css/bootstrap.min.css">
     <style>
-        section h1 {
-            text-align: center;
-            font-size: 2em;
-            margin-top: 40px;
+        .brand-span {
+            color: dodgerblue;
         }
 
-        section div div:nth-child(1) {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            max-width: 400px;
-            margin-left: 100px;
-            margin-top: 100px;
+        .navbar-brand {
+            margin-left: 10px;
         }
 
-        section div div:nth-child(2) {
-            display: inline-block;
+        .navbar-collapse {
+            flex-direction: row-reverse;
         }
 
-        section input {
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            width: 100%;
-            box-sizing: border-box;
+        .navbar-nav .nav-link:hover {
+            color: dodgerblue;
+            transition: color 0.3s ease;
         }
 
-        section button:nth-child(1) {
-            margin-left: 100px;
-            background-color: dodgerblue;
+        .table-view {
+            margin-top: 120px;
         }
 
-        section button:nth-child(3) {
-            background-color: orange;
+        .form-view {
+            margin-top: 48px;
         }
 
-        section button:nth-child(4) {
-            background-color: red;
-        }
+        @media all and (max-width: 992px) {
+            .table-view {
+                margin-top: 60px;
+            }
 
-        section button {
-            padding: 10px;
-            background-color: #2ecc71;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-weight: bold;
-            margin-top: 10px;
-            width: 96px;
+            .form-view {
+                margin-top: 12px;
+            }
         }
     </style>
 </head>
 
 <body>
-<nav id="main-nav">
-    <div id="logo">
-        <h1>WEB | <span>POS</span></h1>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#" target="_blank">WEB | <span class="brand-span">POS</span></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#" target="_blank">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#" target="_blank">Customers</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#" target="_blank">Items</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#" target="_blank">Orders</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#" target="_blank">Order Details</a>
+                </li>
+            </ul>
+        </div>
     </div>
-    <ul id="nav-list">
-        <li class="nav-item"><a href="https://ijse.lk" target="_blank">Home</a></li>
-        <li class="nav-item"><a href="https://ijse.lk" target="_blank">Customers</a></li>
-        <li class="nav-item"><a href="https://ijse.lk" target="_blank">Items</a></li>
-        <li class="nav-item"><a href="https://ijse.lk" target="_blank">Orders</a></li>
-        <li class="nav-item"><a href="https://ijse.lk" target="_blank">Order Details</a></li>
-    </ul>
 </nav>
 
-<section>
-    <h1>Customer Management</h1>
-    <div>
-        <div>
-            <input placeholder="Customer Id" required>
-            <input placeholder="Name" required>
-            <input placeholder="Address" required>
-            <input placeholder="Salary" required>
+<section id="customers" class="container-fluid mt-5">
+    <div class="row">
+        <div class="col-lg-6 table-view">
+            <table class="table table-hover table-bordered">
+                <thead>
+                <tr>
+                    <th>Customer Id</th>
+                    <th>Customer Name</th>
+                    <th>Customer Address</th>
+                    <th>Customer Salary</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>C001</td>
+                    <td>Thushal</td>
+                    <td>Galle</td>
+                    <td>55000</td>
+                </tr>
+                <tr>
+                    <td>C002</td>
+                    <td>Kamal</td>
+                    <td>Colombo</td>
+                    <td>99000</td>
+                </tr>
+                <tr>
+                    <td>C003</td>
+                    <td>Namal</td>
+                    <td>Matara</td>
+                    <td>34000</td>
+                </tr>
+                <tr>
+                    <td>C004</td>
+                    <td>Sugath</td>
+                    <td>Kandy</td>
+                    <td>78000</td>
+                </tr>
+                <tr>
+                    <td>C005</td>
+                    <td>Sindhu</td>
+                    <td>Jaffna</td>
+                    <td>56000</td>
+                </tr>
+                </tbody>
+            </table>
         </div>
-        <div>
-            <button>Save</button>
-            <button>Search</button>
-            <button>Update</button>
-            <button>Delete</button>
+        <div class="col-lg-6 form-view">
+            <h1 class="mb-4">Customer Management</h1>
+            <form>
+                <div class="mb-3">
+                    <input type="text" class="form-control mb-2" placeholder="Customer Id">
+                    <input type="text" class="form-control mb-2" placeholder="Customer Name">
+                    <input type="text" class="form-control mb-2" placeholder="Customer Address">
+                    <input type="text" class="form-control mb-2" placeholder="Customer Salary">
+                </div>
+                <div class="mb-3">
+                    <button type="submit" class="btn btn-primary">Save</button>
+                    <button type="submit" class="btn btn-success">Search</button>
+                    <button type="submit" class="btn btn-warning">Update</button>
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                </div>
+            </form>
         </div>
     </div>
 </section>
+
+<script src="CSS/bootstrap-5.3.2/js/bootstrap.bundle.js"></script>
 </body>
 </html>
