--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
             <form>
                 <div class="mb-3">
                     <input type="text" class="form-control mb-2 text-white" placeholder="Customer Id"
-                           style="background-color: #2D2C2C">
+                           style="background-color: #333333">
                     <input type="text" class="form-control mb-2 text-white" placeholder="Customer Name"
-                           style="background-color: #2D2C2C">
+                           style="background-color: #333333">
                     <input type="text" class="form-control mb-2 text-white" placeholder="Customer Address"
-                           style="background-color: #2D2C2C">
+                           style="background-color: #333333">
                     <input type="text" class="form-control mb-2 text-white" placeholder="Customer Salary"
-                           style="background-color: #2D2C2C">
+                           style="background-color: #333333">
                 </div>
                 <div class="mb-3">
                     <button type="submit" class="btn btn-primary">Save</button>
