btn width customized

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
             margin-top: 100px;
         }
 
+        .btn {
+            width: 170px;
+        }
+
         @media all and (max-width: 992px) {
             .table-view {
                 margin-top: 45px;
@@ -150,10 +154,10 @@
                                style="background-color: #333333">
                     </div>
                     <div class="mb-3">
-                        <button type="submit" class="btn btn-primary">Save</button>
-                        <button type="submit" class="btn btn-success">Search</button>
-                        <button type="submit" class="btn btn-warning">Update</button>
-                        <button type="submit" class="btn btn-danger">Delete</button>
+                        <button type="submit" class="btn btn-primary mb-2">Save</button>
+                        <button type="submit" class="btn btn-success mb-2">Search</button>
+                        <button type="submit" class="btn btn-warning mb-2">Update</button>
+                        <button type="submit" class="btn btn-danger mb-2">Delete</button>
                     </div>
                 </form>
             </div>
