--- a/index.html
+++ b/index.html
@@ -10,12 +10,22 @@
             background-color: black;
         }
 
+        .navbar {
+            font-size: 20px;
+            height: 70px;
+        }
+
         .brand-span {
             color: dodgerblue;
         }
 
         .navbar-brand {
-            margin-left: 10px;
+            font-size: 30px;
+            margin-left: 25px;
+        }
+
+        .nav-item {
+            padding: 10px;
         }
 
         .navbar-collapse {
@@ -51,7 +61,7 @@
 
         @media all and (max-width: 992px) {
             .table-view {
-                margin-top: 45px;
+                margin-top: 15px;
             }
 
             .form-view {
@@ -63,7 +73,7 @@
 
 <body>
 <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#" target="_blank">WEB | <span class="brand-span">POS</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
