--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
 
         .nav-item {
-            padding: 10px;
+            padding-right: 10px;
         }
 
         .navbar-collapse {
