--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div class="col-lg-6 form-view">
                 <form>
                     <div class="mb-3">
-                        <input type="text" class="form-control mb-2 text-white" placeholder="Customer Id"
+                        <input type="text" class="form-control mb-2 text-white" placeholder="Customer ID"
                                style="background-color: #333333">
                         <input type="text" class="form-control mb-2 text-white" placeholder="Customer Name"
                                style="background-color: #333333">
