--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>
         body {
             background-color: black;
+            color: white;
         }
 
         .navbar {
@@ -37,15 +38,11 @@
         }
 
         .customer-head {
-            color: white;
             text-align: center;
             margin-top: 100px;
         }
 
-        .table-view {
-            margin-top: 45px;
-        }
-
+        .table-view,
         .form-view {
             margin-top: 45px;
         }
@@ -153,20 +150,20 @@
             <div class="col-lg-6 form-view">
                 <form>
                     <div class="mb-3">
-                        <input type="text" class="form-control mb-2 text-white" placeholder="Customer ID"
-                               style="background-color: #333333">
-                        <input type="text" class="form-control mb-2 text-white" placeholder="Customer Name"
-                               style="background-color: #333333">
-                        <input type="text" class="form-control mb-2 text-white" placeholder="Customer Address"
-                               style="background-color: #333333">
-                        <input type="text" class="form-control mb-2 text-white" placeholder="Customer Salary"
-                               style="background-color: #333333">
+                        <input type="text" class="form-control mb-2" placeholder="Customer ID"
+                               style="background-color: #333333; color: white;">
+                        <input type="text" class="form-control mb-2" placeholder="Customer Name"
+                               style="background-color: #333333; color: white;">
+                        <input type="text" class="form-control mb-2" placeholder="Customer Address"
+                               style="background-color: #333333; color: white;">
+                        <input type="text" class="form-control mb-2" placeholder="Customer Salary"
+                               style="background-color: #333333; color: white;">
                     </div>
                     <div class="mb-3">
-                        <button type="submit" class="btn btn-primary mb-2">Save</button>
-                        <button type="submit" class="btn btn-success mb-2">Search</button>
-                        <button type="submit" class="btn btn-warning mb-2">Update</button>
-                        <button type="submit" class="btn btn-danger mb-2">Delete</button>
+                        <button type="button" class="btn btn-primary mb-2">Save</button>
+                        <button type="button" class="btn btn-success mb-2">Search</button>
+                        <button type="button" class="btn btn-warning mb-2">Update</button>
+                        <button type="button" class="btn btn-danger mb-2">Delete</button>
                     </div>
                 </form>
             </div>
