--- a/index.html
+++ b/index.html
@@ -11,25 +11,8 @@
             color: white;
         }
 
-        .navbar {
-            font-size: 18px;
-        }
-
-        .navbar-brand {
-            font-size: 30px;
-            margin-left: 25px;
-        }
-
-        .brand-span {
-            color: dodgerblue;
-        }
-
         .nav-item {
             padding-right: 10px;
-        }
-
-        .navbar-collapse {
-            flex-direction: row-reverse;
         }
 
         .navbar-nav .nav-link:hover {
@@ -37,46 +20,23 @@
             transition: color 0.3s ease;
         }
 
-        .customer-head {
-            text-align: center;
-            margin-top: 100px;
-        }
-
-        .table-view,
-        .form-view {
-            margin-top: 45px;
-        }
-
         .form-control::placeholder {
             color: grey;
-        }
-
-        .btn {
-            width: 170px;
-        }
-
-        @media all and (max-width: 992px) {
-            .table-view {
-                margin-top: 15px;
-            }
-
-            .form-view {
-                margin-top: 30px;
-            }
         }
     </style>
 </head>
 
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" style="font-size: 18px">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#" target="_blank">WEB | <span class="brand-span">POS</span></a>
+            <a class="navbar-brand" href="#" target="_blank" style="font-size: 30px; margin-left: 25px">WEB | <span
+                    class="brand-span" style="color: dodgerblue">POS</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse" id="navbarNav" style="flex-direction: row-reverse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" href="#" target="_blank">Home</a>
@@ -100,72 +60,112 @@
 </header>
 
 <main>
-    <section id="customers" class="container-fluid mt-5">
-        <h1 class="mb-4 customer-head">Customer Management</h1>
-        <div class="row">
-            <div class="col-lg-6 table-view">
-                <table class="table table-hover table-bordered table-dark">
-                    <thead>
-                    <tr>
-                        <th>Customer Id</th>
-                        <th>Customer Name</th>
-                        <th>Customer Address</th>
-                        <th>Customer Salary</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td>C001</td>
-                        <td>Thushal</td>
-                        <td>Galle</td>
-                        <td>55000</td>
-                    </tr>
-                    <tr>
-                        <td>C002</td>
-                        <td>Kamal</td>
-                        <td>Colombo</td>
-                        <td>99000</td>
-                    </tr>
-                    <tr>
-                        <td>C003</td>
-                        <td>Namal</td>
-                        <td>Matara</td>
-                        <td>34000</td>
-                    </tr>
-                    <tr>
-                        <td>C004</td>
-                        <td>Sugath</td>
-                        <td>Kandy</td>
-                        <td>78000</td>
-                    </tr>
-                    <tr>
-                        <td>C005</td>
-                        <td>Sindhu</td>
-                        <td>Jaffna</td>
-                        <td>56000</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="col-lg-6 form-view">
-                <form>
-                    <div class="mb-3">
-                        <input type="text" class="form-control mb-2" placeholder="Customer ID"
-                               style="background-color: #333333; color: white;">
-                        <input type="text" class="form-control mb-2" placeholder="Customer Name"
-                               style="background-color: #333333; color: white;">
-                        <input type="text" class="form-control mb-2" placeholder="Customer Address"
-                               style="background-color: #333333; color: white;">
-                        <input type="text" class="form-control mb-2" placeholder="Customer Salary"
-                               style="background-color: #333333; color: white;">
+    <section id="customers" style="margin-top: 100px">
+        <div class="container-fluid">
+            <h1 class="text-center">Customer Management</h1>
+            <div class="row">
+                <!-- Table Column -->
+                <div class="col-lg-6 mt-5" style="margin-left: 100px">
+                    <div class="row">
+                        <div class="input-group mt-3 mb-4">
+                            <input type="search" class="form-control text-white bg-transparent" placeholder="Enter ID"
+                                   aria-label="Enter ID" aria-describedby="basic-addon2" style="border-radius: 5px">
+                            <div class="input-group-append">
+                                <button class="btn btn-success" style="width: 150px; margin-left: 20px;">Search</button>
+                            </div>
+                        </div>
+
                     </div>
-                    <div class="mb-3">
-                        <button type="button" class="btn btn-primary mb-2">Save</button>
-                        <button type="button" class="btn btn-success mb-2">Search</button>
-                        <button type="button" class="btn btn-warning mb-2">Update</button>
-                        <button type="button" class="btn btn-danger mb-2">Delete</button>
+
+                    <div class="col-lg-12">
+                        <table class="table table-hover table-bordered table-dark">
+                            <thead>
+                            <tr>
+                                <th>Customer Id</th>
+                                <th>Customer Name</th>
+                                <th>Customer Address</th>
+                                <th>Customer Salary</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>C001</td>
+                                <td>Thushal</td>
+                                <td>Galle</td>
+                                <td>55000</td>
+                            </tr>
+                            <tr>
+                                <td>C002</td>
+                                <td>Kamal</td>
+                                <td>Colombo</td>
+                                <td>99000</td>
+                            </tr>
+                            <tr>
+                                <td>C003</td>
+                                <td>Namal</td>
+                                <td>Matara</td>
+                                <td>34000</td>
+                            </tr>
+                            <tr>
+                                <td>C004</td>
+                                <td>Sugath</td>
+                                <td>Kandy</td>
+                                <td>78000</td>
+                            </tr>
+                            <tr>
+                                <td>C005</td>
+                                <td>Sindhu</td>
+                                <td>Jaffna</td>
+                                <td>56000</td>
+                            </tr>
+                            </tbody>
+                        </table>
                     </div>
-                </form>
+                </div>
+
+                <!-- Form Column -->
+                <div class="col-md-4 mx-auto mt-5">
+                    <div class="bg-dark rounded-3 p-4">
+                        <h3 class="text-center mb-4" style="color: dodgerblue">Manage Customers</h3>
+
+                        <!-- Inputs -->
+                        <form>
+                            <div class="input-group mb-3">
+                                <div class="input-group mb-3">
+                                    <input type="text" class="form-control text-white" placeholder="Customer ID"
+                                           aria-label="Customer ID"
+                                           aria-describedby="basic-addon2" style="background-color: #333333">
+                                </div>
+                                <div class="input-group mb-3">
+                                    <input type="text" class="form-control text-white" placeholder="Customer Name"
+                                           aria-label="Customer Name"
+                                           aria-describedby="basic-addon2" style="background-color: #333333">
+                                </div>
+                                <div class="input-group mb-3">
+                                    <input type="text" class="form-control text-white" placeholder="Customer Address"
+                                           aria-label="Customer Address"
+                                           aria-describedby="basic-addon2" style="background-color: #333333">
+                                </div>
+                                <div class="input-group mb-3">
+                                    <input type="text" class="form-control text-white" placeholder="Customer Salary"
+                                           aria-label="Customer Salary"
+                                           aria-describedby="basic-addon2" style="background-color: #333333">
+                                </div>
+                            </div>
+                        </form>
+
+                        <!-- Buttons -->
+                        <div class="row justify-content-between">
+                            <div class="col-auto">
+                                <button class="btn btn-danger" style="width: 150px;">Clear</button>
+                            </div>
+                            <div class="col-auto">
+                                <button class="btn btn-primary" style="width: 150px;">Save</button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
             </div>
         </div>
     </section>
