Input Color Changed

--- a/index.html
+++ b/index.html
@@ -142,22 +142,22 @@
                                 <div class="input-group mb-4 mt-4">
                                     <input type="text" class="form-control text-white" placeholder="Customer ID"
                                            aria-label="Customer ID"
-                                           aria-describedby="basic-addon2" style="background-color: #333333">
+                                           aria-describedby="basic-addon2" style="background-color: #3c3c3c">
                                 </div>
                                 <div class="input-group mb-4">
                                     <input type="text" class="form-control text-white" placeholder="Customer Name"
                                            aria-label="Customer Name"
-                                           aria-describedby="basic-addon2" style="background-color: #333333">
+                                           aria-describedby="basic-addon2" style="background-color: #3c3c3c">
                                 </div>
                                 <div class="input-group mb-4">
                                     <input type="text" class="form-control text-white" placeholder="Customer Address"
                                            aria-label="Customer Address"
-                                           aria-describedby="basic-addon2" style="background-color: #333333">
+                                           aria-describedby="basic-addon2" style="background-color: #3c3c3c">
                                 </div>
                                 <div class="input-group mb-4">
                                     <input type="text" class="form-control text-white" placeholder="Customer Salary"
                                            aria-label="Customer Salary"
-                                           aria-describedby="basic-addon2" style="background-color: #333333">
+                                           aria-describedby="basic-addon2" style="background-color: #3c3c3c">
                                 </div>
                             </div>
                         </form>
