--- a/index.html
+++ b/index.html
@@ -139,22 +139,22 @@
                         <!-- Inputs -->
                         <form>
                             <div class="input-group">
-                                <div class="input-group mb-4 mt-4">
+                                <div class="input-group mx-auto mb-4 mt-4" style="width: 350px">
                                     <input type="text" class="form-control text-white" placeholder="Customer ID"
                                            aria-label="Customer ID"
                                            aria-describedby="basic-addon2" style="background-color: #3c3c3c">
                                 </div>
-                                <div class="input-group mb-4">
+                                <div class="input-group mx-auto mb-4" style="width: 350px">
                                     <input type="text" class="form-control text-white" placeholder="Customer Name"
                                            aria-label="Customer Name"
                                            aria-describedby="basic-addon2" style="background-color: #3c3c3c">
                                 </div>
-                                <div class="input-group mb-4">
+                                <div class="input-group mx-auto mb-4" style="width: 350px">
                                     <input type="text" class="form-control text-white" placeholder="Customer Address"
                                            aria-label="Customer Address"
                                            aria-describedby="basic-addon2" style="background-color: #3c3c3c">
                                 </div>
-                                <div class="input-group mb-4">
+                                <div class="input-group mx-auto mb-4" style="width: 350px">
                                     <input type="text" class="form-control text-white" placeholder="Customer Salary"
                                            aria-label="Customer Salary"
                                            aria-describedby="basic-addon2" style="background-color: #3c3c3c">
@@ -163,7 +163,7 @@
                         </form>
 
                         <!-- Buttons -->
-                        <div class="row justify-content-between">
+                        <div class="row justify-content-evenly">
                             <div class="col-auto">
                                 <button class="btn btn-danger mb-2" style="width: 150px;">Clear</button>
                             </div>
