--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                        placeholder="Enter ID"
                                        aria-label="Enter ID" aria-describedby="basic-addon2" style="border-radius: 5px">
                                 <div class="input-group-append">
-                                    <button class="btn btn-success" style="width: 150px; margin-left: 20px;">Search
+                                    <button class="btn btn-secondary" style="width: 150px; margin-left: 20px;">Search
                                     </button>
                                 </div>
                             </div>
