--- a/index.html
+++ b/index.html
@@ -73,11 +73,9 @@
                                        placeholder="Enter ID"
                                        aria-label="Enter ID" aria-describedby="basic-addon2" style="border-radius: 5px">
                                 <div class="input-group-append">
-                                    <button class="btn btn-secondary" style="width: 150px; margin-left: 20px;">Search
-                                    </button>
+                                    <button class="btn btn-secondary" style="width: 150px; margin-left: 20px;">Search</button>
                                 </div>
                             </div>
-
                         </div>
                         <div class="col-lg-12">
                             <table class="table table-hover table-bordered table-dark">
@@ -87,6 +85,7 @@
                                     <th>Customer Name</th>
                                     <th>Customer Address</th>
                                     <th>Customer Salary</th>
+                                    <th>Action</th> <!-- New column for the delete button -->
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -95,30 +94,35 @@
                                     <td>Thushal</td>
                                     <td>Galle</td>
                                     <td>55000</td>
+                                    <td><button class="btn btn-danger btn-sm">Delete</button></td>
                                 </tr>
                                 <tr>
                                     <td>C002</td>
                                     <td>Kamal</td>
                                     <td>Colombo</td>
                                     <td>99000</td>
+                                    <td><button class="btn btn-danger btn-sm">Delete</button></td>
                                 </tr>
                                 <tr>
                                     <td>C003</td>
                                     <td>Namal</td>
                                     <td>Matara</td>
                                     <td>34000</td>
+                                    <td><button class="btn btn-danger btn-sm">Delete</button></td>
                                 </tr>
                                 <tr>
                                     <td>C004</td>
                                     <td>Sugath</td>
                                     <td>Kandy</td>
                                     <td>78000</td>
+                                    <td><button class="btn btn-danger btn-sm">Delete</button></td>
                                 </tr>
                                 <tr>
                                     <td>C005</td>
                                     <td>Sindhu</td>
                                     <td>Jaffna</td>
                                     <td>56000</td>
+                                    <td><button class="btn btn-danger btn-sm">Delete</button></td>
                                 </tr>
                                 </tbody>
                             </table>
