--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
         .form-control::placeholder {
             color: grey;
         }
+
+        @media all and (max-width: 426px) {
+            .table th:nth-child(3) {
+                display: none;
+            }
+
+            .table tD:nth-child(3) {
+                display: none;
+            }
+        }
     </style>
 </head>
 
