--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             color: grey;
         }
 
-        @media all and (max-width: 426px) {
+        @media all and (max-width: 500px) {
             .table th:nth-child(3) {
                 display: none;
             }
@@ -188,7 +188,7 @@
                         </form>
 
                         <!-- Buttons -->
-                        <div class="row justify-content-evenly">
+                        <div class="row justify-content-evenly mt-4">
                             <div class="col-auto">
                                 <button class="btn btn-danger mb-2" style="width: 150px;">Clear</button>
                             </div>
