--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                        placeholder="Enter ID"
                                        aria-label="Enter ID" aria-describedby="basic-addon2" style="border-radius: 5px">
                                 <div class="input-group-append">
-                                    <button class="btn btn-secondary" style="width: 150px; margin-left: 20px;">Search
+                                    <button class="btn btn-secondary" style="width: 100px; margin-left: 20px;">Search
                                     </button>
                                 </div>
                             </div>
@@ -150,7 +150,7 @@
                         </div>
                         <div class="row justify-content-end mt-4">
                             <div class="col-auto">
-                                <button class="btn btn-success" style="width: 150px;">Get All</button>
+                                <button class="btn btn-success" style="width: 100px;">Get All</button>
                             </div>
                         </div>
                     </div>
@@ -190,10 +190,10 @@
                         <!-- Buttons -->
                         <div class="row justify-content-evenly mt-4">
                             <div class="col-auto">
-                                <button class="btn btn-danger mb-2" style="width: 150px;">Clear</button>
+                                <button class="btn btn-danger mb-2" style="width: 100px">Clear</button>
                             </div>
                             <div class="col-auto">
-                                <button class="btn btn-primary" style="width: 150px;">Save</button>
+                                <button class="btn btn-primary" style="width: 100px">Save</button>
                             </div>
                         </div>
                     </div>
