--- a/index.html
+++ b/index.html
@@ -361,8 +361,8 @@
                                 <tr>
                                     <th>Item Code</th>
                                     <th>Item Name</th>
-                                    <th>Qty On HAnd</th>
-                                    <th>Price</th>
+                                    <th>Qty On Hand</th>
+                                    <th>Unit Price</th>
                                     <th>Action</th> <!-- New column for the delete button -->
                                 </tr>
                                 </thead>
@@ -447,8 +447,8 @@
                                            aria-describedby="basic-addon2" style="background-color: #3c3c3c">
                                 </div>
                                 <div class="input-group mx-auto mb-4" style="width: 350px">
-                                    <input type="text" class="form-control text-white" placeholder="Price"
-                                           aria-label="Price"
+                                    <input type="text" class="form-control text-white" placeholder="Unit Price"
+                                           aria-label="Unit Price"
                                            aria-describedby="basic-addon2" style="background-color: #3c3c3c">
                                 </div>
                             </div>
